tests/baselines/reference/symbolType9.errors.txt
tests/cases/conformance/es6/Symbols/symbolType9.ts(3,1): error TS2587: Types 'symbol' and 'boolean' have no overlap. Consider explicitly converting the left side using `Boolean(x)`.
tests/cases/conformance/es6/Symbols/symbolType9.ts(5,1): error TS2588: Types 'number' and 'symbol' have no overlap. Consider explicitly converting the right side using `Number(x)`.
tests/cases/conformance/es6/Symbols/symbolType9.ts(7,1): error TS2587: Types 'symbol' and 'number' have no overlap. Consider explicitly converting the left side using `Number(x)`.
tests/cases/conformance/es6/Symbols/symbolType9.ts(9,1): error TS2588: Types 'boolean' and 'symbol' have no overlap. Consider explicitly converting the right side using `Boolean(x)`.


==== tests/cases/conformance/es6/Symbols/symbolType9.ts (4 errors) ====
    var s = Symbol.for("equal");
    s == s;
    s == true;
    ~~~~~~~~~
!!! error TS2587: Types 'symbol' and 'boolean' have no overlap. Consider explicitly converting the left side using `Boolean(x)`.
    s != s;
    0 != s;
    ~~~~~~
!!! error TS2588: Types 'number' and 'symbol' have no overlap. Consider explicitly converting the right side using `Number(x)`.
    s === s;
    s === 1;
    ~~~~~~~
!!! error TS2587: Types 'symbol' and 'number' have no overlap. Consider explicitly converting the left side using `Number(x)`.
    s !== s;
    false !== s;
    ~~~~~~~~~~~
!!! error TS2588: Types 'boolean' and 'symbol' have no overlap. Consider explicitly converting the right side using `Boolean(x)`.